<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ipc_alarm_bg"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/alarm_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/warning_alarm" />

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2012-08-12 11:33:23"
            android:textColor="@color/back"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alarm_ipcname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doors"
                android:textColor="@color/red"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/alarm_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/movealarm"
                android:textColor="@color/back"

                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/alarm_dimss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_dismm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/cancel"
                android:textColor="@color/back"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_read" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/read"
                android:textColor="@color/back"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>